docs/api/qiskit/0.33/qiskit.transpiler.passes.Collect1qRuns.mdx
---
title: Collect1qRuns (v0.33)
description: API reference for qiskit.transpiler.passes.Collect1qRuns in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Collect1qRuns
---

# Collect1qRuns

<Class id="qiskit.transpiler.passes.Collect1qRuns" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/optimization/collect_1q_runs.py" signature="Collect1qRuns(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.AnalysisPass`

  Collect one-qubit subcircuits.

  ## Methods

  <span id="qiskit-transpiler-passes-collect1qruns-name" />

  ### name

  <Function id="qiskit.transpiler.passes.Collect1qRuns.name" signature="Collect1qRuns.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-collect1qruns-run" />

  ### run

  <Function id="qiskit.transpiler.passes.Collect1qRuns.run" signature="Collect1qRuns.run(dag)">
    Run the Collect1qBlocks pass on dag.

    The blocks contain “op” nodes in topological order such that all gates in a block act on the same qubits and are adjacent in the circuit.

    After the execution, `property_set['block_list']` is set to a list of tuples of “op” node.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.Collect1qRuns.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.Collect1qRuns.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

